bridge/base/app-service.yaml
# check if there is at least one published port

#! app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app-published
    namespace: the-only-key
    labels:
        com.docker.compose.project: the_only_key
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: the_only_key
        com.docker.compose.service: app
    ports:
        - name: app-10000
          port: 10000
          protocol: TCP
          targetPort: app-10000
